security(bootstrap): retire hosted database replacement (#220)
* docs: start ultra-review legacy bootstrap retirement

* security(bootstrap): retire hosted database replacement

* fix(settings): keep hosted bootstrap retired on rollback

* fix(bootstrap): isolate local export temporary files

* fix(bootstrap): make local export restoration fail closed

* docs: complete ultra-review hosted bootstrap retirement