@@ -1,14 +1,14 @@
 package org.qortium.test;
 
-import com.sun.net.httpserver.HttpServer;
 import org.apache.commons.io.FileUtils;
-import org.apache.commons.lang3.reflect.FieldUtils;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 import org.qortium.account.PrivateKeyAccount;
 import org.qortium.controller.BlockMinter;
 import org.qortium.controller.Controller;
+import org.qortium.crypto.Crypto;
+import org.qortium.data.account.MintingAccountData;
 import org.qortium.data.block.BlockData;
 import org.qortium.repository.*;
 import org.qortium.settings.Settings;
@@ -18,32 +18,16 @@ import org.qortium.transform.TransformationException;
 import org.qortium.utils.NTP;
 
 import java.io.IOException;
-import java.io.PrintWriter;
-import java.net.HttpURLConnection;
-import java.net.InetSocketAddress;
-import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.time.Instant;
-import java.time.ZoneOffset;
-import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.Assert.*;
-import static org.junit.Assume.assumeTrue;
 
 public class BootstrapTests extends Common {
-
-    private static final String RUN_LIVE_BOOTSTRAP_CHECKS_PROPERTY = "qortium.runLiveBootstrapChecks";
-    private static final String LIVE_BOOTSTRAP_HOSTS_PROPERTY = "qortium.liveBootstrapHosts";
-    private static final int LIVE_BOOTSTRAP_CONNECT_TIMEOUT_MS = 10_000;
-    private static final int LIVE_BOOTSTRAP_READ_TIMEOUT_MS = 10_000;
-    private static final long MINIMUM_BOOTSTRAP_SIZE = 100 * 1024 * 1024L;
-    private static final long MAXIMUM_BOOTSTRAP_AGE = 3 * 24 * 60 * 60 * 1000L;
 
     @Before
     public void beforeTest() throws DataException, IOException {
@@ -82,76 +66,100 @@ public class BootstrapTests extends Common {
 
 
     @Test
-    public void testCreateAndImportBootstrap() throws DataException, InterruptedException, TransformationException, IOException {
+    public void testCreateBootstrapPreservesLiveRepository() throws DataException, InterruptedException, TransformationException, IOException {
 
         Path archivePath = Paths.get(Settings.getInstance().getRepositoryPath(), "archive", "2-900.dat");
-        BlockData block1000;
-        byte[] originalArchiveContents;
-
         try (final Repository repository = RepositoryManager.getRepository()) {
             this.buildDummyBlockchain(repository);
 
+            PrivateKeyAccount mintingAccount = Common.getTestAccount(repository, "alice-reward-share");
+            MintingAccountData mintingAccountData = new MintingAccountData(mintingAccount.getPrivateKey(), mintingAccount.getPublicKey());
+            repository.getAccountRepository().save(mintingAccountData);
+            repository.saveChanges();
+
             Bootstrap bootstrap = new Bootstrap(repository);
             Path bootstrapPath = bootstrap.getBootstrapOutputPath();
+			Path tempRoot = Paths.get(Settings.getInstance().getRepositoryPath()).toAbsolutePath().getParent().resolve("tmp");
+			Files.createDirectories(tempRoot);
+			Path unrelatedTempFile = tempRoot.resolve("unrelated-operation.sentinel");
+			Files.writeString(unrelatedTempFile, "preserve");
+			long initialTempEntryCount = countEntries(tempRoot);
+
+			byte[] originalArchiveContents = Files.readAllBytes(archivePath);
+			BlockData originalBlock1000 = repository.getBlockRepository().fromHeight(1000);
+			assertNotNull(originalBlock1000);
+			BlockData originalArchivedBlock10 = repository.getBlockArchiveRepository().fromHeight(10);
+			assertNotNull(originalArchivedBlock10);
 
             // Ensure the compressed bootstrap doesn't exist
             assertFalse(Files.exists(bootstrapPath));
+			Path checksumPath = Paths.get(bootstrapPath.toString() + ".sha256");
+			Files.writeString(checksumPath, "stale-checksum-with-extra-bytes");
 
-            // Create bootstrap
-            bootstrap.create();
+            try {
+                // Create bootstrap
+                assertEquals(bootstrapPath.toAbsolutePath().toString(), bootstrap.create());
+				assertTrue("Local archive creation must not delete unrelated sibling temp files", Files.exists(unrelatedTempFile));
+				assertEquals("Local archive creation must remove its operation directory", initialTempEntryCount, countEntries(tempRoot));
 
-            // Ensure the compressed bootstrap exists
-            assertTrue(Files.exists(bootstrapPath));
+                // Ensure the compressed bootstrap exists
+                assertTrue(Files.exists(bootstrapPath));
 
-            // Ensure the original block archive file exists
-            assertTrue(Files.exists(archivePath));
-            originalArchiveContents = Files.readAllBytes(archivePath);
+                // Ensure the original block archive file exists
+                assertTrue(Files.exists(archivePath));
 
-            // Ensure block 1000 exists in the repository
-            block1000 = repository.getBlockRepository().fromHeight(1000);
-            assertNotNull(block1000);
+                // Ensure block 1000 exists in the repository
+                BlockData block1000 = repository.getBlockRepository().fromHeight(1000);
+                assertNotNull(block1000);
 
-            // Ensure we can retrieve block 10 from the archive
-            assertNotNull(repository.getBlockArchiveRepository().fromHeight(10));
+                // Ensure we can retrieve block 10 from the archive
+                BlockData archivedBlock10 = repository.getBlockArchiveRepository().fromHeight(10);
+                assertNotNull(archivedBlock10);
 
-            // Now delete block 1000
-            repository.getBlockRepository().delete(block1000);
-            assertNull(repository.getBlockRepository().fromHeight(1000));
+                assertTrue(Files.exists(checksumPath));
+                assertEquals(Crypto.digestHexString(bootstrapPath.toFile(), 1024 * 1024), Files.readString(checksumPath).trim());
 
-            // Overwrite the archive with dummy data, and verify it
-            try (PrintWriter out = new PrintWriter(archivePath.toFile())) {
-                out.println("testdata");
-            }
-            String newline = System.getProperty("line.separator");
-            assertEquals("testdata", Files.readString(archivePath).replace(newline, ""));
+                assertArrayEquals(originalBlock1000.getSignature(), block1000.getSignature());
+                assertArrayEquals(originalArchiveContents, Files.readAllBytes(archivePath));
+                assertArrayEquals(originalArchivedBlock10.getSignature(), archivedBlock10.getSignature());
+                assertMintingAccountRestored(repository, mintingAccount);
 
-            // Ensure we can no longer retrieve block 10 from the archive
-            assertNull(repository.getBlockArchiveRepository().fromHeight(10));
+				Bootstrap failingAfterRestore = new Bootstrap(repository) {
+					@Override
+					protected void restoreNodeLocalData() throws DataException, IOException {
+						super.restoreNodeLocalData();
+						throw new DataException("injected restoration failure");
+					}
+				};
 
-            // Import the bootstrap back in
-            bootstrap.importFromPath(bootstrapPath);
-        }
+				try {
+					failingAfterRestore.create();
+					fail("Expected injected restoration failure");
+				} catch (DataException e) {
+					assertTrue(e.getMessage().contains("injected restoration failure"));
+				}
 
-        // We need a new connection because we have switched to a new repository
-        try (final Repository repository = RepositoryManager.getRepository()) {
-
-            // Ensure the block archive file exists
-            assertTrue(Files.exists(archivePath));
-
-            // and that its contents match the original
-            assertArrayEquals(originalArchiveContents, Files.readAllBytes(archivePath));
-
-            // Make sure that block 1000 exists again
-            BlockData newBlock1000 = repository.getBlockRepository().fromHeight(1000);
-            assertNotNull(newBlock1000);
-
-            // and ensure that the signatures match
-            assertArrayEquals(block1000.getSignature(), newBlock1000.getSignature());
-
-            // Ensure we can retrieve block 10 from the archive
-            assertNotNull(repository.getBlockArchiveRepository().fromHeight(10));
+				assertFalse("Restoration failure must not leak the blockchain lock",
+						Controller.getInstance().getBlockchainLock().isHeldByCurrentThread());
+				assertEquals("Restoration failure must remove its operation directory", initialTempEntryCount, countEntries(tempRoot));
+				assertMintingAccountRestored(repository, mintingAccount);
+			} finally {
+				Files.deleteIfExists(unrelatedTempFile);
+			}
         }
     }
+
+	private static long countEntries(Path directory) throws IOException {
+		try (var entries = Files.list(directory)) {
+			return entries.count();
+		}
+	}
+
+	private static void assertMintingAccountRestored(Repository repository, PrivateKeyAccount mintingAccount) throws DataException {
+		MintingAccountData restoredMintingAccount = repository.getAccountRepository().getMintingAccount(mintingAccount.getPrivateKey());
+		assertNotNull(restoredMintingAccount);
+		assertArrayEquals(mintingAccount.getPublicKey(), restoredMintingAccount.getPublicKey());
+	}
 
 
     private void buildDummyBlockchain(Repository repository) throws DataException, InterruptedException, TransformationException, IOException {
@@ -199,238 +207,6 @@ public class BootstrapTests extends Common {
         Controller.getInstance().refillLatestBlocksCache();
 
         repository.saveChanges();
-    }
-
-    @Test
-    public void testGetRandomHostUsesConfiguredHosts() throws IllegalAccessException, DataException {
-        Settings settings = Settings.getInstance();
-        String[] originalBootstrapHosts = settings.getBootstrapHosts();
-        List<String> uniqueHosts = new ArrayList<>();
-
-        try {
-            FieldUtils.writeField(settings, "bootstrapHosts", new String[] {
-                    " https://bootstrap-one.example ",
-                    "https://bootstrap-two.example"
-            }, true);
-
-            String[] bootstrapHosts = settings.getBootstrapHosts();
-            for (int i = 0; i < 1000; i++) {
-                Bootstrap bootstrap = new Bootstrap();
-                String randomHost = bootstrap.getRandomHost();
-                assertNotNull(randomHost);
-
-                if (!uniqueHosts.contains(randomHost)) {
-                    uniqueHosts.add(randomHost);
-                }
-            }
-
-            // Ensure we have more than one bootstrap host in the settings
-            assertTrue(Arrays.asList(bootstrapHosts).size() > 1);
-
-            // Ensure that all have been given the opportunity to be used
-            assertEquals(uniqueHosts.size(), Arrays.asList(bootstrapHosts).size());
-        } finally {
-            FieldUtils.writeField(settings, "bootstrapHosts", originalBootstrapHosts, true);
-        }
-    }
-
-    @Test
-    public void testGetRandomHostFailsWithoutConfiguredHosts() throws IllegalAccessException {
-        Settings settings = Settings.getInstance();
-        String[] originalBootstrapHosts = settings.getBootstrapHosts();
-
-        try {
-            FieldUtils.writeField(settings, "bootstrapHosts", new String[] {"", "  ", null}, true);
-
-            Bootstrap bootstrap = new Bootstrap();
-            try {
-                bootstrap.getRandomHost();
-                fail("Expected getRandomHost() to fail without configured bootstrap hosts");
-            } catch (DataException e) {
-                assertEquals(Bootstrap.MISSING_BOOTSTRAP_HOSTS_MESSAGE, e.getMessage());
-            }
-        } finally {
-            FieldUtils.writeField(settings, "bootstrapHosts", originalBootstrapHosts, true);
-        }
-    }
-
-    @Test
-    public void testLiveBootstrapHostsPropertyOverridesSettings() {
-        String originalLiveBootstrapHostsProperty = System.getProperty(LIVE_BOOTSTRAP_HOSTS_PROPERTY);
-
-        try {
-            System.setProperty(LIVE_BOOTSTRAP_HOSTS_PROPERTY, " https://bootstrap-one.example ,, https://bootstrap-two.example ");
-
-            assertArrayEquals(
-                    new String[] {"https://bootstrap-one.example", "https://bootstrap-two.example"},
-                    this.getLiveBootstrapHosts());
-        } finally {
-            restoreSystemProperty(LIVE_BOOTSTRAP_HOSTS_PROPERTY, originalLiveBootstrapHostsProperty);
-        }
-    }
-
-    @Test
-    public void testBootstrapHeadRequestUsesLoopbackServer() throws IOException {
-        long fileSize = MINIMUM_BOOTSTRAP_SIZE + 1;
-        long lastModified = (NTP.getTime() / 1000L) * 1000L;
-        List<String> requestMethods = new ArrayList<>();
-        HttpServer server = this.createBootstrapHeadServer(HttpURLConnection.HTTP_OK, fileSize, lastModified, requestMethods);
-
-        try {
-            server.start();
-            String bootstrapUrl = this.getLoopbackBootstrapUrl(server);
-
-            BootstrapHead bootstrapHead = this.fetchBootstrapHead(bootstrapUrl);
-
-            assertEquals(1, requestMethods.size());
-            assertEquals("HEAD", requestMethods.get(0));
-            assertEquals(fileSize, bootstrapHead.fileSize);
-            assertEquals(lastModified, bootstrapHead.lastModified);
-            this.assertBootstrapHeadIsCurrent(bootstrapUrl, bootstrapHead);
-        } finally {
-            server.stop(0);
-        }
-    }
-
-    @Test
-    public void testBootstrapHeadRequestRejectsHttpErrors() throws IOException {
-        HttpServer server = this.createBootstrapHeadServer(HttpURLConnection.HTTP_NOT_FOUND, 0L, NTP.getTime(), new ArrayList<>());
-
-        try {
-            server.start();
-            String bootstrapUrl = this.getLoopbackBootstrapUrl(server);
-
-            try {
-                this.fetchBootstrapHead(bootstrapUrl);
-                fail("HTTP errors should fail bootstrap HEAD validation");
-            } catch (IOException e) {
-                assertTrue(e.getMessage().contains("HTTP 404"));
-            }
-        } finally {
-            server.stop(0);
-        }
-    }
-
-    @Test
-    public void testBootstrapHeadValidationRejectsSmallFile() {
-        try {
-            this.assertBootstrapHeadIsCurrent("https://bootstrap.example/bootstrap-archive.7z",
-                    new BootstrapHead(MINIMUM_BOOTSTRAP_SIZE - 1, NTP.getTime()));
-            fail("Bootstrap archive below the minimum size should fail validation");
-        } catch (AssertionError e) {
-            assertTrue(e.getMessage().contains("at least 100MiB"));
-        }
-    }
-
-    @Test
-    public void testBootstrapHeadValidationRejectsStaleFile() {
-        try {
-            this.assertBootstrapHeadIsCurrent("https://bootstrap.example/bootstrap-archive.7z",
-                    new BootstrapHead(MINIMUM_BOOTSTRAP_SIZE, NTP.getTime() - MAXIMUM_BOOTSTRAP_AGE - 1000L));
-            fail("Stale bootstrap archive should fail validation");
-        } catch (AssertionError e) {
-            assertTrue(e.getMessage().contains("last modified date"));
-        }
-    }
-
-    @Test
-    public void testBootstrapHosts() throws IOException {
-        assumeTrue(Boolean.getBoolean(RUN_LIVE_BOOTSTRAP_CHECKS_PROPERTY));
-
-        String[] bootstrapHosts = this.getLiveBootstrapHosts();
-        assertTrue(String.format("No bootstrap hosts configured. Set -D%s or bootstrapHosts in settings.", LIVE_BOOTSTRAP_HOSTS_PROPERTY), bootstrapHosts.length > 0);
-        String[] bootstrapTypes = { "archive" }; // , "toponly", "full"
-
-        for (String host : bootstrapHosts) {
-            for (String type : bootstrapTypes) {
-                String bootstrapFilename = String.format("bootstrap-%s.7z", type);
-                String bootstrapUrl = String.format("%s/%s", host, bootstrapFilename);
-
-                BootstrapHead bootstrapHead = this.fetchBootstrapHead(bootstrapUrl);
-
-                System.out.println(String.format("%s %s size is %d bytes", host, type, bootstrapHead.fileSize));
-                System.out.println(String.format("%s %s last modified timestamp is %d", host, type, bootstrapHead.lastModified));
-                this.assertBootstrapHeadIsCurrent(bootstrapUrl, bootstrapHead);
-            }
-        }
-    }
-
-    private BootstrapHead fetchBootstrapHead(String bootstrapUrl) throws IOException {
-        URL url = new URL(bootstrapUrl);
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-
-        try {
-            connection.setConnectTimeout(LIVE_BOOTSTRAP_CONNECT_TIMEOUT_MS);
-            connection.setReadTimeout(LIVE_BOOTSTRAP_READ_TIMEOUT_MS);
-            connection.setRequestMethod("HEAD");
-
-            int responseCode = connection.getResponseCode();
-            if (responseCode != HttpURLConnection.HTTP_OK)
-                throw new IOException(String.format("%s returned HTTP %d", bootstrapUrl, responseCode));
-
-            return new BootstrapHead(connection.getContentLengthLong(), connection.getLastModified());
-        } finally {
-            connection.disconnect();
-        }
-    }
-
-    private void assertBootstrapHeadIsCurrent(String bootstrapUrl, BootstrapHead bootstrapHead) {
-        assertTrue(String.format("%s size must be at least 100MiB", bootstrapUrl), bootstrapHead.fileSize >= MINIMUM_BOOTSTRAP_SIZE);
-
-        long minimumLastModifiedTimestamp = NTP.getTime() - MAXIMUM_BOOTSTRAP_AGE;
-        assertTrue(String.format("%s last modified date must be in the last 3 days", bootstrapUrl), bootstrapHead.lastModified >= minimumLastModifiedTimestamp);
-    }
-
-    private HttpServer createBootstrapHeadServer(int responseCode, long fileSize, long lastModified, List<String> requestMethods) throws IOException {
-        HttpServer server = HttpServer.create(new InetSocketAddress("127.0.0.1", 0), 0);
-        server.createContext("/bootstrap-archive.7z", exchange -> {
-            try {
-                requestMethods.add(exchange.getRequestMethod());
-                exchange.getResponseHeaders().set("Content-Length", Long.toString(fileSize));
-                exchange.getResponseHeaders().set("Last-Modified", DateTimeFormatter.RFC_1123_DATE_TIME.format(Instant.ofEpochMilli(lastModified).atZone(ZoneOffset.UTC)));
-                exchange.sendResponseHeaders(responseCode, -1);
-            } finally {
-                exchange.close();
-            }
-        });
-
-        return server;
-    }
-
-    private String getLoopbackBootstrapUrl(HttpServer server) {
-        return String.format("http://127.0.0.1:%d/bootstrap-archive.7z", server.getAddress().getPort());
-    }
-
-    private String[] getLiveBootstrapHosts() {
-        String bootstrapHostsProperty = System.getProperty(LIVE_BOOTSTRAP_HOSTS_PROPERTY);
-        if (bootstrapHostsProperty == null || bootstrapHostsProperty.trim().isEmpty())
-            return Settings.getInstance().getBootstrapHosts();
-
-        List<String> bootstrapHosts = new ArrayList<>();
-        for (String bootstrapHost : bootstrapHostsProperty.split(",")) {
-            String trimmedHost = bootstrapHost.trim();
-            if (!trimmedHost.isEmpty())
-                bootstrapHosts.add(trimmedHost);
-        }
-
-        return bootstrapHosts.toArray(new String[0]);
-    }
-
-    private static void restoreSystemProperty(String propertyName, String originalValue) {
-        if (originalValue == null)
-            System.clearProperty(propertyName);
-        else
-            System.setProperty(propertyName, originalValue);
-    }
-
-    private static class BootstrapHead {
-        private final long fileSize;
-        private final long lastModified;
-
-        private BootstrapHead(long fileSize, long lastModified) {
-            this.fileSize = fileSize;
-            this.lastModified = lastModified;
-        }
     }
 
     private void deleteBootstraps() throws IOException {
